--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "undefined",
+  "name": "@google-cloud/service-management",
   "version": "0.1.0",
-  "description": "Servicemanagement client for Node.js",
-  "repository": "googleapis/nodejs-servicemanagement",
+  "description": "Service management client for Node.js",
+  "repository": "googleapis/nodejs-service-management",
   "license": "Apache-2.0",
   "author": "Google LLC",
   "main": "build/src/index.js",
@@ -61,6 +61,6 @@
     "webpack-cli": "^4.5.0"
   },
   "engines": {
-    "node": ">=v10.24.0"
+    "node": ">=v12.0.0"
   }
 }
