--- a/samples/package.json
+++ b/samples/package.json
@@ -4,7 +4,7 @@
   "license": "Apache-2.0",
   "author": "Google LLC",
   "engines": {
-    "node": ">=10"
+    "node": ">=12"
   },
   "files": [
     "*.js"
@@ -13,7 +13,7 @@
     "test": "c8 mocha --timeout 600000 test/*.js"
   },
   "dependencies": {
-    "": "^0.1.0"
+    "@google-cloud/service-management": "^0.1.0"
   },
   "devDependencies": {
     "c8": "^7.1.0",
