--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "undefined",
+  "name": "@google-cloud/service-management",
   "version": "0.1.0",
-  "description": "Servicemanagement client for Node.js",
-  "repository": "googleapis/nodejs-servicemanagement",
+  "description": "Service management client for Node.js",
+  "repository": "googleapis/nodejs-service-management",
   "license": "Apache-2.0",
   "author": "Google LLC",
   "main": "build/src/index.js",
@@ -54,13 +54,13 @@
     "mocha": "^8.3.1",
     "null-loader": "^4.0.1",
     "pack-n-play": "^1.0.0-2",
-    "sinon": "^9.2.4",
+    "sinon": "^10.0.0",
     "ts-loader": "^8.0.17",
     "typescript": "^4.2.3",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0"
   },
   "engines": {
-    "node": ">=v10.24.0"
+    "node": ">=v10.0.0"
   }
 }
